--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3891,10 +3891,6 @@ body {
 				bottom: 0;
 			}
 
-			li {
-				max-width: 155px;
-			}
-
 			.active {
 				position: relative;
 
@@ -3964,104 +3960,6 @@ body {
 					letter-spacing: 0.2em;
 					text-transform: uppercase;
 					vertical-align: top;
-				}
-			}
-
-			.memos-list {
-				margin-top: 80px;
-			}
-
-			.memo-sublist {
-				border: 3px solid #F1F1F1;
-				border-radius: 3px;
-
-				padding: 15px 30px;
-				margin: 10px 0;
-
-				text-align: left;
-
-				h3 {
-					position: relative;
-					cursor: pointer;
-
-					color: #388067;
-					font-family: "orpheuspro";
-					font-style: normal;
-					font-weight: normal;
-					font-size: 32px;
-					line-height: 59px;
-
-					&:after {
-						@extend .svg-arrow-down-green;
-						content: '';
-
-						position: absolute;
-						right: 0;
-						top: 50%;
-						@extend .svg-arrow-down-green-dims;
-
-						transform: translateY(-50%);
-					}
-				}
-
-				&.opened {
-					h3:after {
-						transform: translateY(-50%) rotate(-180deg);
-					}
-				}
-
-				.memo-items {
-					display: flex;
-					flex-wrap: wrap;
-					margin: 0 -12px 15px;
-				}
-
-				.memo-item {
-					background: #F1F1F1;
-					border-radius: 3px;
-
-					margin: 12px;
-					width: calc(25% - 24px);
-					padding: 26px 19px;
-				}
-
-				.archived {
-					background: #388067;
-					border-radius: 3px;
-
-					display: inline-block;
-					padding: 0 11px;
-					margin-bottom: 20px;
-
-					color: #fff;
-					font-style: normal;
-					font-weight: bold;
-					font-size: 14px;
-					line-height: 26px;
-					text-transform: capitalize;
-
-					&:before {
-						@extend .svg-archived-memo;
-						display: none;
-					}
-				}
-
-				.date {
-					margin: 0;
-				}
-
-				.title {
-					color: #388067;
-					font-style: normal;
-					font-weight: 600;
-					font-size: 22px;
-					line-height: 27px;
-					text-decoration: none;
-					text-underline-offset: 3px;
-
-					&:hover {
-						text-decoration: underline;
-					}
 				}
 			}
 
@@ -6763,4 +6661,145 @@ body .ui-tooltip.ui-widget-content {
 
 .trigger-top {
 	position: absolute;
+}
+
+.ui-dialog .ui-dialog-content.archived-memos-popup {
+	padding: 30px 35px 61px;
+	font-family: "Raleway", sans-serif;
+	overflow: visible;
+
+	h2 {
+		margin-bottom: 75px;
+
+		color: #000;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 28px;
+		line-height: 39px;
+	}
+
+	.memos-list {
+		margin-right: -23px;
+		padding-right: 23px !important;
+	}
+
+	.memo-sublist {
+		border: 3px solid #F1F1F1;
+		border-radius: 3px;
+
+		padding: 8px 26px;
+		margin: 10px 0;
+
+		text-align: left;
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		h3 {
+			position: relative;
+			cursor: pointer;
+
+			color: #388067;
+			font-family: "orpheuspro";
+			font-style: normal;
+			font-weight: normal;
+			font-size: 28px;
+			line-height: 59px;
+
+			&:after {
+				@extend .svg-arrow-down-green;
+				content: '';
+
+				position: absolute;
+				right: 0;
+				top: 50%;
+				@extend .svg-arrow-down-green-dims;
+
+				transform: translateY(-50%);
+			}
+		}
+
+		&.opened {
+			h3:after {
+				transform: translateY(-50%) rotate(-180deg);
+			}
+		}
+
+		.memo-items {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 0 -20px 15px;
+		}
+
+		.memo-item {
+			margin: 12px 20px;
+			width: calc(25% - 40px);
+			padding: 21px 0;
+		}
+
+		.date {
+			margin: 0;
+
+			color: #979797;
+			font-style: normal;
+			font-weight: bold;
+			font-size: 11px;
+			line-height: 25px;
+			letter-spacing: 0.165em;
+			text-transform: uppercase;
+		}
+
+		.title {
+			color: #000;
+			font-style: normal;
+			font-weight: 600;
+			font-size: 22px;
+			line-height: 27px;
+			text-decoration: none;
+			text-underline-offset: 3px;
+
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.ui-dialog .ui-dialog-content.archived-memos-popup {
+		padding: 25px 16px;
+
+		h2 {
+			margin-bottom: 50px;
+
+			font-size: 22px;
+			line-height: 31px;
+		}
+
+		.memo-sublist {
+			padding: 20px 16px;
+
+			h3 {
+				font-size: 22px;
+				line-height: 31px;
+			}
+
+			.memo-item {
+				padding: 0;
+				margin: 15px 20px;
+				width: calc(50% - 40px);
+			}
+
+			.title {
+				font-size: 18px;
+				line-height: 25px;
+			}
+		}
+
+		.memos-list {
+			margin-right: -13px;
+			padding-right: 13px !important;
+		}
+	}
 }
