--- a/css/style.css
+++ b/css/style.css
@@ -6310,24 +6310,18 @@ body {
   text-align: center;
 }
 .membership .membership-content .membership-list {
-  max-width: 1090px;
+  max-width: 1210px;
   display: block;
   margin: 0 auto;
+  padding: 0 15px;
   position: relative;
-}
-.membership .membership-content .membership-list .owl-stage {
-  display: flex;
-  padding: 10px 0;
-}
-.membership .membership-content .owl-item {
-  padding: 8.5px;
-  width: 25%;
 }
 .membership .membership-content .item {
   background: #fff;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
   border-radius: 3px;
-  padding: 35px 25px;
+  padding: 25px;
+  margin: 0 0 10px;
   height: 100%;
   color: #000;
   font-style: normal;
@@ -6349,7 +6343,7 @@ body {
   transform: rotate(90deg) scale(0.35);
 }
 .membership .membership-content .description {
-  margin-top: 30px;
+  margin-top: 35px;
 }
 .membership .membership-content a {
   color: #388067;
