--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4960,20 +4960,11 @@ body {
 		}
 
 		.membership-list {
-			max-width: 1090px;
+			max-width: 1210px;
 			display: block;
 			margin: 0 auto;
+			padding: 0 15px;
 			position: relative;
-
-			.owl-stage {
-				display: flex;
-				padding: 10px 0;
-			}
-		}
-
-		.owl-item {
-			padding: 8.5px;
-			width: 25%;
 		}
 
 		.item {
@@ -4981,7 +4972,8 @@ body {
 			box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
 			border-radius: 3px;
 
-			padding: 35px 25px;
+			padding: 25px;
+			margin: 0 0 10px;
 			height: 100%;
 
 			color: #000;
@@ -5010,7 +5002,7 @@ body {
 
 
 		.description {
-			margin-top: 30px;
+			margin-top: 35px;
 		}
 
 		a {
