--- a/css/style.css
+++ b/css/style.css
@@ -6626,8 +6626,8 @@ body {
   text-transform: uppercase;
 }
 .two-columns-wrapper .two-columns input.text-field {
-  background: #fff;
-  border: 1px solid #aaa;
+  background: #f1f1f1;
+  border: 1px solid #f1f1f1;
   border-radius: 3px;
   padding: 17.5px 19px;
   margin-bottom: 20px;
