--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5387,8 +5387,8 @@ body {
 		}
 
 		input.text-field {
-			background: #fff;
-			border: 1px solid #aaa;
+			background: #f1f1f1;
+			border: 1px solid #f1f1f1;
 			border-radius: 3px;
 
 			padding: 17.5px 19px;
